--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ increment-btn {
 }
 
 body {
-    background-image: url("./Images/flowers-19830__340.jpg")
+    background-image: url("./flowers-19830__340.jpg")
 }
 
 p{
